[gd_scene load_steps=4 format=3 uid="uid://dm7xp4c6vy45g"]

[ext_resource type="Script" path="res://song_editor.gd" id="1_edagw"]
[ext_resource type="Resource" uid="uid://c3ockfhtf73g1" path="res://song_res/test.tres" id="2_6gn5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a5gy"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 15.0
expand_margin_top = 10.0
expand_margin_right = 15.0
expand_margin_bottom = 10.0

[node name="SongEditor" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_edagw")
song = ExtResource("2_6gn5a")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -376.0
offset_top = 480.0
offset_right = 184.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2

[node name="FocusPanel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(384, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -384.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1a5gy")

[node name="ArrowContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -488.0
offset_top = -5.0
offset_right = 8.0
offset_bottom = 1435.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="SongControls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -491.0
offset_top = 330.0
offset_right = -286.0
offset_bottom = -278.0
grow_horizontal = 0
grow_vertical = 2

[node name="Title" type="Label" parent="SongControls"]
layout_mode = 2
text = "Song File Name"

[node name="SongName" type="LineEdit" parent="SongControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "UNNAMED_SONG"

[node name="Save" type="Button" parent="SongControls"]
layout_mode = 2
text = "Save"

[node name="HSeparator" type="HSeparator" parent="SongControls"]
layout_mode = 2

[node name="Play" type="Button" parent="SongControls"]
layout_mode = 2
text = "Play"

[node name="Pause" type="Button" parent="SongControls"]
layout_mode = 2
text = "Pause"

[node name="Bpm" type="HBoxContainer" parent="SongControls"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="SongControls/Bpm"]
layout_mode = 2
text = "BPM:"

[node name="LineEdit" type="LineEdit" parent="SongControls/Bpm"]
layout_mode = 2
size_flags_horizontal = 3
text = "156"
alignment = 2

[node name="ElapsedTime" type="HBoxContainer" parent="SongControls"]
layout_mode = 2

[node name="Title" type="Label" parent="SongControls/ElapsedTime"]
layout_mode = 2
text = "Elapsed time:"

[node name="Time" type="Label" parent="SongControls/ElapsedTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "00.00"
horizontal_alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="SongControls/Save" to="." method="save_song"]
